--- a/index.css
+++ b/index.css
@@ -1,7 +1,5 @@
-.grid-container {
-    display: grid;
-    grid-colu-gap: 50px;
-    grid-template-columns: auto; 
-    padding: 10px;
-  
-  }
+.container {
+  max-width: 960px;
+  margin: 0 auto;
+  background-color: darkslategray; 
+}
