--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,24 @@
-
 body {
     font-family: Arial, Helvetica, sans-serif;
     animation: move linear 2000ms infinite;
 }
 
-h2 {
-    font-style: italic;
-    color: rgb(254, 255, 254);
-    text-shadow: 1px 1px 2px black;
+.navbar {
+    overflow: hidden;
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: white;
+}
+
+/********************************************* Styling the Section of Body *********************************************/
+
+.display {
+    visibility: hidden;
 }
 
 /* Style the header */
+
 header {
     background-color: #666;
     padding: 30px;
@@ -19,7 +27,165 @@ header {
     color: white;
 }
 
+.center {
+    text-align: center;
+    font-size: 48px;
+}
+
+.right {
+    text-align: right;
+    right: 16px;
+}
+
+footer>p a {
+    color: cyan;
+    text-align: center;
+}
+
+/****** Section 2 animation ******/
+
+#sectionId {
+    padding-top: 18%;
+    width: 50%;
+    margin-left: 250px;
+    color: #000;
+}
+
+#sectionId > a {
+    color: #000;
+}
+
+#border {
+    border-radius: 25px;
+    width: 1125px;
+    margin: auto;
+}
+/*******************/
+#edu {
+    display: block;
+    width: 350px;
+}
+
+#edu > ul > li {
+    display: inline;
+    font-size: 24px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    text-align: center;
+}
+
+#edu .dropdown {
+    display: none;
+}
+
+#edu a:hover + .dropdown {
+    display: block;
+}
+/*******************/
+
+#hob {
+    display: block;
+    width: 350px;
+}
+
+#ex {
+    display: block;
+    width: 350px;
+}
+
+/*******************/
+#pro2 {
+    display: block;
+    width: 350px;
+}
+
+#pro2 > ul > li {
+    display: inline;
+    font-size: 24px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#pro2 .dropdown {
+    display: none;
+}
+
+#pro2 a:hover + .dropdown {
+    display: block;
+}
+/*******************/
+
+
+/*******************/
+#pro {
+    display: block;
+    width: 350px;
+}
+
+#pro > ul > li {
+    display: inline;
+    font-size: 24px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#pro .dropdown {
+    display: none;
+}
+
+#pro a:hover + .dropdown {
+    display: block;
+}
+/*******************/
+
+#skill {
+    display: block;
+    width: 350px;
+}
+
+.container {
+    position: fixed;
+
+}
+
+#proId{
+    width: 1115px;
+    color: black;
+}
+
+#proId > ul > li {
+    display: inline;
+    font-size: 24px;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+}
+
+#proId .dropdown {
+    display: none;
+}
+
+#proId a:hover + .dropdown {
+    display: block;
+}
+
+.grid-container {
+    display: grid;
+    grid-template-columns: auto auto auto;
+    grid-gap: 20px;
+    background-color: rgb(70, 74, 78);
+    padding: 20px;
+}
+
+.grid-container>div {
+    background-color: rgba(255, 255, 255, 0.8);
+    border: 1px solid black;
+    text-align: center;
+    font-size: 18px;
+    box-shadow: 2px 2px 5px black;
+}
+
+
+/**********************/
+
+
 /* Create two columns/boxes that floats next to each other */
+
 nav {
     float: left;
     height: 300px;
@@ -29,15 +195,20 @@ nav {
 }
 
 /* Style the list inside the menu */
+
 nav li {
     size: 100%;
 }
 
 /* Style the list inside the menu */
+
 nav ul {
     list-style-type: none;
     padding: 0;
+}
 
+nav>ul>li img {
+    padding-top: 20%;
 }
 
 article {
@@ -46,10 +217,10 @@ article {
     width: 82.6%;
     background-color: #f1f1f1;
     height: 300px;
-    
 }
 
 /* Clear floats after the columns */
+
 section:after {
     content: "";
     display: table;
@@ -58,6 +229,7 @@ section:after {
 }
 
 /* Style the footer */
+
 footer {
     background-color: #777;
     padding: 10px;
@@ -65,20 +237,7 @@ footer {
     color: white;
 }
 
-img {
-margin-top: 20%;
-
-}
-
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
-@media (max-width: 600px) {
-
-    nav,
-    article {
-        width: 100%;
-        height: auto;
-    }
-}
+/********************************************* Heading 2 Animation *********************************************/
 
 .line-1 {
     position: relative;
@@ -94,16 +253,15 @@ margin-top: 20%;
 }
 
 /* Animation */
+
 .anim-typewriter {
-    animation: typewriter 4s steps(54) 1s 1 normal both,
-        blinkTextCursor 500ms steps(54) infinite normal;
+    animation: typewriter 4s steps(54) 1s 1 normal both, blinkTextCursor 500ms steps(54) infinite normal;
 }
 
 @keyframes typewriter {
     from {
         width: 0;
     }
-
     to {
         width: 6em;
     }
@@ -113,25 +271,12 @@ margin-top: 20%;
     from {
         border-right-color: rgba(255, 255, 255, .75);
     }
-
     to {
         border-right-color: transparent;
     }
 }
 
-.display {
-    visibility: hidden;
-}
-
-.center {
-    text-align: center;
-    font-size: 48px;
-}
-
-.right {
-    text-align: right;
-    right: 16px;
-}
+/********************************************* Body Background animation *******************************************/
 
 .bg {
     animation: slide 3s ease-in-out infinite alternate;
@@ -171,21 +316,7 @@ margin-top: 20%;
     0% {
         transform: translateX(-25%);
     }
-
     100% {
         transform: translateX(25%);
     }
-}
-
-#link-color {
-    color: cyan;
-}
-
-#section1 {
-    position: absolute;
-    top: 1050px;
-    height: 450px;
-    width: 50%;
-    left: 32%;
-
 }
