--- a/css/style.css
+++ b/css/style.css
@@ -1,341 +1,462 @@
-body {
-    font-family: Arial, Helvetica, sans-serif;
-    animation: move linear 2000ms infinite;
+body, div, h1, h2, h3, h4, h5, h6, p, blockquote, pre, dl, dt, dd, ol, ul, li, hr, fieldset, form, label, legend, th, td, article, aside, figure, footer, header, hgroup, menu, nav, section, summary, hgroup {
+    margin: 0;
+    padding: 0;
+    border: 0;
 }
 
-.navbar {
-    overflow: hidden;
-    position: fixed;
-    top: 0;
+a:active, a:hover {
+    outline: 0;
+}
+
+@-webkit-viewport {
+    width: device-width;
+}
+
+@-moz-viewport {
+    width: device-width;
+}
+
+@-ms-viewport {
+    width: device-width;
+}
+
+@-o-viewport {
+    width: device-width;
+}
+
+@viewport {
+    width: device-width;
+}
+
+/* ------------------------------------------
+  RESPONSIVE NAV STYLES
+--------------------------------------------- */
+
+.nav-collapse ul {
+    margin: 0;
+    padding: 0;
     width: 100%;
-    background-color: white;
+    display: block;
+    list-style: none;
 }
 
-/********************************************* Styling the Section of Body *********************************************/
-
-.display {
-    visibility: hidden;
+.nav-collapse li {
+    width: 100%;
+    display: block;
 }
 
-/* Style the header */
+.js .nav-collapse {
+    clip: rect(0 0 0 0);
+    max-height: 0;
+    position: absolute;
+    display: block;
+    overflow: hidden;
+    zoom: 1;
+}
+
+.nav-collapse.opened {
+    max-height: 9999px;
+}
+
+.disable-pointer-events {
+    pointer-events: none !important;
+}
+
+.nav-toggle {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
+}
+
+@media screen and (min-width: 40em) {
+    .js .nav-collapse {
+        position: relative;
+    }
+    .js .nav-collapse.closed {
+        max-height: none;
+    }
+    .nav-toggle {
+        display: none;
+    }
+}
+
+/* ------------------------------------------
+  DEMO STYLES
+--------------------------------------------- */
+
+body {
+    -webkit-text-size-adjust: 100%;
+    -ms-text-size-adjust: 100%;
+    text-size-adjust: 100%;
+    color: #37302a;
+    background: #fff;
+    font: normal 100%/1.4 sans-serif;
+}
+
+section {
+    border-bottom: 1px solid #999;
+    text-align: center;
+    padding: 100px 0 0;
+    height: 800px;
+    width: 100%;
+}
+
+h1 {
+    margin-bottom: .5em;
+}
+
+p {
+    width: 90%;
+    margin: 0 auto;
+}
+
+/* ------------------------------------------
+  FIXED HEADER
+--------------------------------------------- */
 
 header {
-    background-color: #666;
-    padding: 30px;
-    text-align: center;
-    font-size: 35px;
-    color: white;
-}
-
-.center {
-    text-align: center;
-    font-size: 48px;
-}
-
-.right {
-    text-align: right;
-    right: 16px;
-}
-
-footer>p a {
-    color: cyan;
-    text-align: center;
-}
-
-/****** Section 2 animation ******/
-
-#sectionId {
-    padding-top: 18%;
-    width: 50%;
-    margin-left: 250px;
-    color: #000;
-}
-
-#sectionId>a {
-    color: #000;
-}
-
-#border {
-    border-radius: 25px;
-    width: 1125px;
-    margin: auto;
-}
-
-/*******************/
-
-#edu {
-    display: block;
-    width: 350px;
-}
-
-#edu>ul>li {
-    display: inline;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    line-height: 1.6;
-    padding-left: 30px;
-}
-
-#edu .dropdown {
-    display: none;
-}
-
-#edu a:hover+.dropdown {
-    display: table;
-}
-
-/*******************/
-
-#ex {
-    display: block;
-    width: 350px;
-}
-
-#ex>ul>li {
-    display: inline;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-#ex .dropdown {
-    position: relative;
-    display: none;
-}
-
-#ex a:hover+.dropdown {
-    display: table;
-}
-
-/*******************/
-
-#hob {
-    display: block;
-    width: 350px;
-}
-
-#hob>ul>li {
-    display: inline;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    text-align: center;
-    color: red;
-    font-weight: bold;
-    line-height: 1.6;
-}
-
-#hob .dropdown {
-    position: relative;
-    display: none;
-}
-
-#hob a:hover+.dropdown {
-    display: table;
-}
-
-/*******************/
-
-/*******************/
-
-#pro {
-    display: block;
-    width: 350px;
-}
-
-#pro>ul>li {
-    display: inline;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-}
-
-#pro .dropdown {
-    display: none;
-}
-
-#pro a:hover+.dropdown {
-    display: table;
-}
-
-#img1 li .bottom-left {
-    position: absolute;
-    padding-left: 50px;
-}
-
-#img2 .bottom-right {
-    position: absolute;
-    margin-left: 20px;
-}
-
-/*******************/
-
-#skill {
-    display: block;
-    width: 350px;
-}
-
-#skill>ul>li {
-    display: inline;
-    font-size: 20px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    line-height: 1.6;
-    padding-left: 50px;
-    font-weight: bold; 
-}
-
-#skill .dropdown {
-    display: none;
-}
-
-#skill a:hover+.dropdown {
-    display: table;
-}
-
-/*******************/
-
-.container {
+    background-image: linear-gradient(rgb(26, 106, 180), gray, black);
     position: fixed;
+    z-index: 3;
+    width: 100%;
+    left: 0;
+    top: 0;
 }
 
-/*******************/
-
-#proId {
-    width: 1115px;
-    color: black;
-}
-
-#proId>ul>li {
-    display: inline;
-    font-size: 24px;
-    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    color: white;
-    text-shadow: 2px 2px 5px black;
+.logo {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    text-decoration: none;
     font-weight: bold;
+    line-height: 55px;
+    padding: 0 20px;
+    color: #fff;
+    float: left;
+
 }
 
-#proId .dropdown {
-    display: none;
+/* ------------------------------------------
+  MASK
+--------------------------------------------- */
+
+.mask {
+    -webkit-transition: opacity 300ms;
+    -moz-transition: opacity 300ms;
+    transition: opacity 300ms;
+    background: rgba(0, 0, 0, .5);
+    visibility: hidden;
+    position: fixed;
+    opacity: 0;
+    z-index: 2;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    top: 0;
 }
 
-/*******************/
-
-#proId a:hover+.dropdown {
-    display: block;
+.android .mask {
+    -webkit-transition: none;
+    transition: none;
 }
 
-.grid-container {
+.js-nav-active .mask {
+    visibility: visible;
+    opacity: 1;
+}
+
+@media screen and (min-width: 40em) {
+    .mask {
+        display: none !important;
+        opacity: 0 !important;
+    }
+}
+
+/* ------------------------------------------
+  NAVIGATION STYLES
+--------------------------------------------- */
+
+.fixed {
+    position: fixed;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.nav-collapse, .nav-collapse * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+
+.nav-collapse, .nav-collapse ul {
+    list-style: none;
+    width: 100%;
+    float: left;
+}
+
+@media screen and (min-width: 40em) {
+    .nav-collapse {
+        float: right;
+        width: auto;
+    }
+}
+
+.nav-collapse li {
+    float: left;
+    width: 100%;
+}
+
+@media screen and (min-width: 40em) {
+    .nav-collapse li {
+        width: auto;
+    }
+}
+
+.nav-collapse a {
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    border-top: 1px solid white;
+    text-decoration: none;
+    background-image: linear-gradient(rgb(26, 106, 180), gray, black);
+    padding: 0.7em 1em;
+    color: #fff;
+    width: 100%;
+    float: left;
+}
+
+.nav-collapse a:active, .nav-collapse .active a {
+    background-image: linear-gradient(rgb(26, 106, 180), gray, black);
+}
+
+@media screen and (min-width: 40em) {
+    .nav-collapse a {
+        border-left: 1px solid white;
+        padding: 1.02em 2em;
+        text-align: center;
+        border-top: 0;
+        float: left;
+        margin: 0;
+    }
+}
+
+.nav-collapse ul ul a {
+    background: lightgrey;
+    padding-left: 2em;
+}
+
+@media screen and (min-width: 40em) {
+    .nav-collapse ul ul a {
+        display: none;
+    }
+}
+
+/* ------------------------------------------
+  NAV TOGGLE STYLES
+--------------------------------------------- */
+
+@font-face {
+    font-family: "responsivenav";
+    src: url("../icons/responsivenav.eot");
+    src: url("../icons/responsivenav.eot?#iefix") format("embedded-opentype"), url("../icons/responsivenav.ttf") format("truetype"), url("../icons/responsivenav.woff") format("woff"), url("../icons/responsivenav.svg#responsivenav") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
+.nav-toggle {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    text-decoration: none;
+    text-indent: -300px;
+    position: relative;
+    overflow: hidden;
+    width: 60px;
+    height: 55px;
+    float: right;
+}
+
+.nav-toggle:before {
+    color: #fff;
+    /* Edit this to change the icon color */
+    font: normal 28px/55px "responsivenav";
+    /* Edit font-size (28px) to change the icon size */
+    text-transform: none;
+    text-align: center;
+    position: absolute;
+    content: "\2261";
+    /* Hamburger icon */
+    text-indent: 0;
+    speak: none;
+    width: 100%;
+    left: 0;
+    top: 0;
+}
+
+.nav-toggle.active:before {
+    font-size: 24px;
+    content: "\78";
+    /* Close icon */
+}
+
+h1 {
+    color: white;
+    font-size: 24px;
+}
+/* ------------------------------------------
+  About Section
+--------------------------------------------- */
+
+#about {}
+
+#about p {
+    padding-top: 250px;
+    line-height: 1.6;
+    font-weight: bold;
+    font-size: 24px;
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 100px;
+}
+
+/* ------------------------------------------
+  Hobbies Section
+--------------------------------------------- */
+
+#hobbies .grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 50px;
+    grid-column-gap: 10px;
+    padding: 10px;
+}
+
+#hobbies .grid-container>div {
+    display: inline;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 150px;
+    font-size: 30px;
+    line-height: 1.6;
+}
+
+#item1 {
+    display: inline;
+}
+/* ------------------------------------------
+  Projects Section
+--------------------------------------------- */
+
+#projects .grid-container {
     display: grid;
     grid-template-columns: auto auto auto;
-    grid-gap: 20px;
-    background-color: rgb(70, 74, 78);
-    padding: 20px;
-}
-
-.grid-container>div {
-    background-color: rgba(255, 255, 255, 0.8);
-    border: 1px solid black;
-    text-align: center;
-    font-size: 18px;
-    box-shadow: 2px 2px 5px black;
-}
-
-.grid-container>div a {
-    color: #000;
-}
-
-/**********************/
-
-/* Create two columns/boxes that floats next to each other */
-
-nav {
-    float: left;
-    height: 300px;
-    /* only for demonstration, should be removed */
-    background: #ccc;
-    padding: 20px;
-}
-
-/* Style the list inside the menu */
-
-nav li {
-    size: 100%;
-}
-
-/* Style the list inside the menu */
-
-nav ul {
-    list-style-type: none;
-    padding: 0;
-}
-
-nav>ul>li img {
-    padding-top: 20%;
-}
-
-article {
-    float: left;
-    padding: 20px;
-    width: 82.6%;
-    background-color: #f1f1f1;
-    height: 300px;
-}
-
-/* Clear floats after the columns */
-
-section:after {
-    content: "";
-    display: table;
-    clear: both;
-    margin-top: 20%;
-}
-
-/* Style the footer */
-
-footer {
-    background-color: #777;
+    grid-row-gap: 30px;
+    grid-column-gap: 10px;
     padding: 10px;
+}
+
+#projects .grid-container>div {
+    display: inline;
+    background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    color: white;
+    padding: 100px;
+    font-size: 30px;
 }
 
-/********************************************* Heading 2 Animation *********************************************/
+/* ------------------------------------------
+  Education Section
+--------------------------------------------- */
+#education .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 30px;
+    grid-column-gap: 10px;
+    padding: 10px;
+}
 
-.line-1 {
-    position: relative;
-    top: 50%;
-    width: 100px;
-    margin: auto;
-    border-right: 2px solid rgba(255, 255, 255, .75);
-    font-size: 180%;
+#education .grid-container>div {
+    display: inline;
+    background-color: rgba(255, 255, 255, 0.8);
     text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    transform: translateY(0%);
+    padding: 100px;
+    font-size: 30px;
 }
 
-/* Animation */
-
-.anim-typewriter {
-    animation: typewriter 4s steps(54) 1s 1 normal both, blinkTextCursor 500ms steps(54) infinite normal;
+#codeblue {
+    color: blue;
 }
 
-@keyframes typewriter {
-    from {
-        width: 0;
-    }
-    to {
-        width: 6em;
-    }
+#foursquare {
+    color: rgb(24, 222, 236);
 }
 
-@keyframes blinkTextCursor {
-    from {
-        border-right-color: rgba(255, 255, 255, .75);
-    }
-    to {
-        border-right-color: transparent;
-    }
+/* ------------------------------------------
+  Experience Section
+--------------------------------------------- */
+
+#experience .grid-container {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-row-gap: 30px;
+    grid-column-gap: 10px;
+    padding: 10px;
 }
 
-/********************************************* Body Background animation *******************************************/
+#experience .grid-container>div {
+    display: inline;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 100px;
+    font-size: 30px;
+}
+
+
+
+/* ------------------------------------------
+  Experience Section
+--------------------------------------------- */
+
+#skills .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 40px;
+    grid-column-gap: 10px;
+    padding: 10px;
+}
+
+#skills .grid-container>div {
+    display: inline;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 100px;
+    font-size: 30px;
+}
+
+/* ------------------------------------------
+  Contact Section
+--------------------------------------------- */
+
+#contact .grid-container {
+    display: grid;
+    grid-template-columns: auto;
+    grid-row-gap: 40px;
+    grid-column-gap: 10px;
+    padding: 10px;
+}
+
+#contact .grid-container>div {
+    display: inline-block;
+    background-color: rgba(255, 255, 255, 0.8);
+    text-align: center;
+    padding: 100px;
+    font-size: 30px;
+    line-height: 1.6;
+}
+
+/* ------------------------------------------
+  Background Animation
+--------------------------------------------- */
 
 .bg {
     animation: slide 3s ease-in-out infinite alternate;
