--- a/css/style2.css
+++ b/css/style2.css
@@ -5,6 +5,7 @@ body{
 h2 {
     background-color: blue;
     color: chartreuse;
+    font-family: 'Press Start 2P', cursive;
 }
 
 img{
@@ -20,5 +21,22 @@ a{
 }
 
 #navigation {
-    
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    grid-template-rows: min-content min-content auto min-content;
+    grid-template-areas: "header" "navigation" "content" "footer";
+    position: sticky;
+    top: 0;
+    min-height: 100vh;
+}
+
+@media (min-width: 750px) {
+    body {
+        background-color: blueviolet;
+        grid-template-columns: auto;
+        grid-template-areas: "navigation header" "navigation content" "navigation footer";
+    }
 }
