updating reposity bruh

--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,82 @@
-body {
+#root{
+    background-color: gray
+}
+
+h2 {
+    background-color: blue;
+    color: chartreuse;
+    font-family: 'Press Start 2P', cursive;
+}
+
+img{
+    box-shadow: 0em black;
+}
+
+h3 {
+    color: aqua;
+}
+
+a{
+    text-shadow: 1px 1px  1px red;
+}
+
+.emphasis {
+    font-weight: bold;
+}
+
+#middle {
+    font-size: 2em;
+    font-style: italic;
+}
+
+#header {
+    background-image: url(https://media.giphy.com/media/ZtReYKaGfv572/giphy.gif);
+    background-position: center right;
+    grid-area: header;
+}
+
+#header h1, #header h2 {
+    color: #07c4dd;
+}
+
+#content {
+    background-color: gray;
+    grid-area: content;
+    padding: 20px;
+}
+
+#footer {
+    background-color: navy;
+    grid-area: footer;
+}
+
+#navigation {
+    background-color: cyan;
+    grid-area: navigation;
+    position: sticky;
+    top: 0;
+}
+
+#navigation>ul {
+    align-items: center;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    grid-template-rows: min-content min-content auto min-content;
+    grid-template-areas: "header" "navigation" "content" "footer";
+    position: sticky;
+    top: 0;
+    min-height: 100vh;
+}
+
+@media (min-width: 750px) {
+    #root {
+        background-color: blueviolet;
+        grid-template-columns: auto;
+        grid-template-areas: "navigation header" "navigation content" "navigation footer";
+    }
+}body {
     margin: 0;
     background-color: rgb(18, 59, 105);
     display: grid;
@@ -110,7 +188,7 @@ ul {
 }
 
 @media (min-width: 750px) {
-    body {
+    #root {
         grid-template-columns: 15% auto;
         grid-template-rows: 40vh auto min-content;
         grid-template-areas: "navigation header" "navigation content" "navigation footer";
